{{$NEXT}}

1.302079  2017-04-03 12:12:02-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fixes for '. in @INC' changes (#768)
    - Timeout when waiting for child procs and threads (#765)

1.302078  2017-03-01 15:24:12-08:00 America/Los_Angeles

    - No changes since last trial

1.302077  2017-02-19 14:34:30-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix #762, newlines for todo subtest
    - Revisit #637, fix rare race condition it created

1.302076  2017-02-01 19:38:42-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix crash when TB->reset used inside subtest

1.302075  2017-01-10 19:39:28-08:00 America/Los_Angeles

    - No changes, just marking a stable release

1.302074  2017-01-08 11:41:44-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add 'cid' to trace
    - Add signatures to trace
    - Add related() to events
    - Now it is possible to check if events are related
    - Add 'no_fork' option to run_subtest()

1.302073  2016-12-18 23:02:54-08:00 America/Los_Angeles

    - No changes from last trial

1.302072  2016-12-18 01:08:12-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Expose tools.pl as Test2::Tools::Tiny

1.302071  2016-12-17 12:08:29-08:00 America/Los_Angeles

    - No changes since last trial release

1.302070  2016-12-14 21:32:47-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Added two new event classes, Test2::Event::Encoding and
      Test2::Event::TAP::Version. These are primarily being added for the
      benefit of Test2::Harness now, but they could be useful for other Test2
      event consumer tools in the future. Implemented by Dave Rolsky (#743).

1.302069  2016-12-12 15:03:04-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Generate HashBase from Object::HashBase which has been split out
    - When a subtest is marked as todo, all of its contained Ok and Subtest
      events are now updated so that they return true for
      $e->effective_pass. Implemented by Dave Rolsky. (#742)
